Test demo of updated master

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This branch combines the compressible duct capability with PETSc for the flow and the scalar
+This branch combines the compressible duct capability with PETSc for the flow and the scalar.
